<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_edit_item_title"
        android:textSize="25sp"
        android:textColor="#000000"
        android:paddingBottom="20dp"/>

    <TextView
        android:text="@string/item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/etItemName"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp" />

    <EditText
        android:id="@+id/etItemCost"
        android:hint="@string/estimated_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp" />

    <EditText
        android:id="@+id/etItemDesc"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"/>

    <CheckBox android:id="@+id/is_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_purchased"
        android:textSize="16sp"
        android:paddingTop="15dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        >
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>